# afonse

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
.github/workflows/: release-gate.yml
music_teacher_ai/ai/: AGENTS.md  query_parser.py
music_teacher_ai/api/: AGENTS.md  cli.py  mcp_server.py  rest_api.py
music_teacher_ai/application/: __init__.py  config_service.py  enrichment_service.py  errors.py  playlist_service.py  search_service.py
music_teacher_ai/config/: AGENTS.md  credentials.py  settings.py
music_teacher_ai/core/: AGENTS.md  api_cache.py  billboard_client.py  lastfm_client.py  lyrics_client.py  musicbrainz_client.py  spotify_client.py
music_teacher_ai/database/: AGENTS.md  models.py  repositories.py  sqlite.py
music_teacher_ai/demo/: demo_songs.json  loader.py
music_teacher_ai/ingestion/: seed_ingestion.py  songs_seed.json
music_teacher_ai/pipeline/: AGENTS.md  charts_ingestion.py  embedding_pipeline.py  enrichment.py  expansion.py  fetchers.py  jobs.py  lyrics_downloader.py  metadata_enrichment.py  observers.py  reporter.py  types.py  validation.py  vocabulary_indexer.py
music_teacher_ai/playlists/: AGENTS.md  exporters.py  manager.py  models.py
scripts/: fix_metadata_source.sql
tests/: test_application_services.py  test_config_endpoints.py  test_credentials.py  test_demo.py  test_education_services.py  test_enrichment.py  test_expansion.py  test_lyrics_downloader.py  test_lyrics_normalization.py  test_playlists.py  test_query_parser.py  test_reporter.py  test_similar_search.py
(+37 files in other folders)
